(Dev): using overstory titiler server

--- a/src/ml_notebooks/conda/median_mosaic.ipynb
+++ b/src/ml_notebooks/conda/median_mosaic.ipynb
@@ -1310,72 +1310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "5328eb25-3b76-43c5-935c-72e269c0c786",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">Cluster deleted successfully.</span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[32mCluster deleted successfully.\u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "distributed.client - ERROR - Failed to reconnect to scheduler after 30.00 seconds, closing client\n",
-      "_GatheringFuture exception was never retrieved\n",
-      "future: <_GatheringFuture finished exception=CancelledError()>\n",
-      "asyncio.exceptions.CancelledError\n",
-      "distributed.deploy.cluster - WARNING - Failed to sync cluster info multiple times - perhaps there's a connection issue? Error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/distributed/comm/tcp.py\", line 398, in connect\n",
-      "    stream = await self.client.connect(\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/tornado/tcpclient.py\", line 275, in connect\n",
-      "    af, addr, stream = await connector.start(connect_timeout=timeout)\n",
-      "asyncio.exceptions.CancelledError\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/asyncio/tasks.py\", line 492, in wait_for\n",
-      "    fut.result()\n",
-      "asyncio.exceptions.CancelledError\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/distributed/comm/core.py\", line 284, in connect\n",
-      "    comm = await asyncio.wait_for(\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/asyncio/tasks.py\", line 494, in wait_for\n",
-      "    raise exceptions.TimeoutError() from exc\n",
-      "asyncio.exceptions.TimeoutError\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/distributed/deploy/cluster.py\", line 115, in _sync_cluster_info\n",
-      "    await self.scheduler_comm.set_metadata(\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/distributed/core.py\", line 817, in send_recv_from_rpc\n",
-      "    comm = await self.live_comm()\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/distributed/core.py\", line 774, in live_comm\n",
-      "    comm = await connect(\n",
-      "  File \"/home/alex/anaconda3/envs/coiled-coiled-default/lib/python3.9/site-packages/distributed/comm/core.py\", line 308, in connect\n",
-      "    raise OSError(\n",
-      "OSError: Timed out trying to connect to tls://100.26.3.198:8786 after 30 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "coiled.delete_cluster(name=\"stackstac\")  # Add your cluster name here\n",
+    "# coiled.delete_cluster(name=\"stackstac\")  # Add your cluster name here\n",
     "# client.close()  # Close the client as well"
    ]
   }
