(Docs): Updated README

--- a/src/ml_notebooks/stac/stac.ipynb
+++ b/src/ml_notebooks/stac/stac.ipynb
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "1d0b32c2-03b1-4c64-b12f-54c0fa990b09",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "7e3e6f1f-1715-486c-8a43-09f3b629b143",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "<Client id=overstory-stac>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,29 +604,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "0aa5219a-bc32-4892-9222-92e136f44f97",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Item id=20210922_100732_ssc12_u0002>,\n",
-       " <Item id=20210922_100732_ssc12_u0001>,\n",
-       " <Item id=20210710_133141_ssc8_u0001>,\n",
-       " <Item id=20210528_131522_ssc9_u0001>,\n",
-       " <Item id=20210425_100412_ssc3_u0002>,\n",
-       " <Item id=20210425_100412_ssc3_u0001>]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "items = catalog.get_items()\n",
-    "list(items)"
+    "# items = catalog.get_items()\n",
+    "# list(items)"
    ]
   },
   {
@@ -647,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 19,
    "id": "e4c36273-87ee-419f-918b-d5cfe221d659",
    "metadata": {},
    "outputs": [],
@@ -673,17 +657,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "id": "68aeef4b-0ed6-4006-b12e-3ce192105c1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pystac_client.item_search.ItemSearch at 0x7f27848feeb0>"
+       "<pystac_client.item_search.ItemSearch at 0x7f894dcdcb20>"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,14 +678,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 22,
    "id": "a665cbbd-fb3b-4612-b7cd-b1a5e3df5907",
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = list(search.get_items())\n",
-    "for item in items:\n",
-    "    print(f\"{item.id}: {item.datetime}\")"
+    "# items = list(search.get_items())\n",
+    "# for item in items:\n",
+    "#     print(f\"{item.id}: {item.datetime}\")"
    ]
   },
   {
@@ -716,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "9270ca51-18f2-4354-801f-1eb2fa30cb44",
    "metadata": {},
    "outputs": [],
